# qa_guru_python_6_19_homework

./: pyproject.toml
